# natizon

./: .gitattributes  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
docs/: type-mapping.md
src/natizon/: __init__.py  _strings.py  _transformer.py  exceptions.py  parser.py  serializer.py  types.py
src/natizon/grammar/: common_zig.lark  zon.lark
tests/: smoke_test.py  test_zig_conformance.py
tests/decode/: test_primitives.py
tests/encode/: test_custom_types.py  test_enums.py  test_errors.py  test_formatting.py  test_mappings.py  test_primitives.py  test_sequences.py
tests/natizon/: test_edge_cases.py  test_errors.py  test_serializer.py  test_structs.py
