[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "natizon"
version = "0.2.2"
requires-python = ">= 3.12"
authors = [
    { name = "Eric Joldasov", email = "bratishkaerik@landless-city.net" }
]
description = "A pure Python, native ZON (Zig Object Notation) parser."
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSES/*",
]
keywords = ["zig", "ZON", "Zig Object Notation", "parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Libraries :: Python Modules",
    #
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "lark>=1.3.1",
]

[project.urls]
Homepage = "https://github.com/BratishkaErik/natizon"
Repository = "https://github.com/BratishkaErik/natizon"
Issues = "https://github.com/BratishkaErik/natizon/issues"

[dependency-groups]
test = [
    "pytest>=9.0.3",
]
lint = [
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.uv]
exclude-newer = "1 week"

[tool.ruff]
preview = true

[tool.ruff.lint]
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`.
select = ["D"]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
